v2.0
- downloading single files
- non-premium
- new graphics
- v1.7.10